--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+:root {
+  --bg-color: #22222218;
+  --text-color: rgb(45, 49, 45);
+}
 body {
-  color: rgb(45, 49, 45);
-  background-color: #22222218;
+  color: var(--text-color);
+  background-color: var(--bg-color);
 }
 
 
